eevee smoke color does not apply permanently #60170

Closed
opened 2019-01-04 22:09:37 +01:00 by Nikolaij · 4 comments

System Information
Operating system: Windows 10 64 bit
Graphics card: GforceGTX 950 oc
CPU : Intel Core i3-6100 3.7Ghz
RAM : 16 GB

Blender Version
Broken:
blender-2.80-c97c76c01c1d-win64 (2019-01-04)

Short description of error
changed smoke color does not apply permanently in EEVEE and WORKBENCH
(Cycles works fine)
If I change the smoke color in the smoke flow settings it aplys but as soon as it loops the playback it becones white again.bug.blend

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

(start with default scene)
scale standard cube by 8
add sphere at (0, 0, 0)
sphere -> smoke-> flow
cube -> smoke -> domain
cube -> viewport display -> solid

check Volumetric in render settings

cube -> add principled volume shader
- > set color attribute to "color"
sphere -> smoke->flow->smoke color = red
play

  • white smoke
    stop
    change smoke color

  • colored smoke

wait until loop

  • again white smoke

**System Information** Operating system: Windows 10 64 bit Graphics card: GforceGTX 950 oc CPU : Intel Core i3-6100 3.7Ghz RAM : 16 GB **Blender Version** Broken: blender-2.80-c97c76c01c1d-win64 (2019-01-04) **Short description of error** changed smoke color does not apply permanently in EEVEE and WORKBENCH (Cycles works fine) If I change the smoke color in the smoke flow settings it aplys but as soon as it loops the playback it becones white again.[bug.blend](https://archive.blender.org/developer/F6175819/bug.blend) **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). (start with default scene) scale standard cube by 8 add sphere at (0, 0, 0) sphere -> smoke-> flow cube -> smoke -> domain cube -> viewport display -> solid check Volumetric in render settings cube -> add principled volume shader - > set color attribute to "color" sphere -> smoke->flow->smoke color = red play - > white smoke stop change smoke color - > colored smoke wait until loop - > again white smoke
Author

Added subscriber: @FATTOMCAT

Added subscriber: @FATTOMCAT
Author

It also does not work if i set the color trough an attribute node.

It also does not work if i set the color trough an attribute node.
Clément Foucault was assigned by Sebastian Parborg 2019-01-25 12:19:23 +01:00

This issue was referenced by d0fb0d0a9d

This issue was referenced by d0fb0d0a9d0d698a499d7e38943696a43a7e456e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60170
No description provided.