Fix T60170: Eevee: smoke color does not apply permanently

This was because color is not present in the density texture if there is
only one constant color. Adding it as a uniform.