source/blender/draw/engines/eevee/eevee_volumes.c
@@ -525,6 +525,13 @@ void EEVEE_volumes_cache_object_add(EEVEE_ViewLayerData *sldata, EEVEE_Data *ved
 			DRW_shgroup_uniform_texture_ref(grp, "sampflame", &sds->tex_flame);
 		}
 
+		/* Constant Volume color. */
+		static float white[3] = {1.0f, 1.0f, 1.0f};
+		bool use_constant_color = ((sds->active_fields & SM_ACTIVE_COLORS) == 0 &&
+		                           (sds->active_fields & SM_ACTIVE_COLOR_SET) != 0);
+
+		DRW_shgroup_uniform_vec3(grp, "volumeColor", (use_constant_color) ? sds->active_color : white, 1);
+
 		/* Output is such that 0..1 maps to 0..1000K */
 		DRW_shgroup_uniform_vec2(grp, "unftemperature", &sds->flame_ignition, 1);
 	}
