source/blender/draw/engines/workbench/workbench_volume.c
@@ -191,10 +191,14 @@ void workbench_volume_cache_populate(WORKBENCH_Data *vedata, Scene *scene, Objec
 		DRW_shgroup_uniform_texture(grp, "transferTexture", sds->tex_coba);
 	}
 	else {
+		static float white[3] = {1.0f, 1.0f, 1.0f};
+		bool use_constant_color = ((sds->active_fields & SM_ACTIVE_COLORS) == 0 &&
+		                           (sds->active_fields & SM_ACTIVE_COLOR_SET) != 0);
 		DRW_shgroup_uniform_texture(grp, "densityTexture", sds->tex);
 		DRW_shgroup_uniform_texture(grp, "shadowTexture", sds->tex_shadow);
 		DRW_shgroup_uniform_texture(grp, "flameTexture", (sds->tex_flame) ? sds->tex_flame : e_data.dummy_tex);
 		DRW_shgroup_uniform_texture(grp, "flameColorTexture", (sds->tex_flame) ? sds->tex_flame_coba : e_data.dummy_coba_tex);
+		DRW_shgroup_uniform_vec3(grp, "activeColor", (use_constant_color) ? sds->active_color : white, 1);
 	}
 	DRW_shgroup_uniform_texture_ref(grp, "depthBuffer", &dtxl->depth);
 	DRW_shgroup_uniform_float_copy(grp, "densityScale", 10.0f * sds->display_thickness);
